--- a/index.html
+++ b/index.html
@@ -60,44 +60,68 @@
                     <div class="box1 box ">
                         <img src="barger2-removebg-preview.png" alt="">
                         <h3>Bacon BB Burger</h3>
-                        <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                        <h4>$4.90 </h4>
+                        <div class="img2">
+                            <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                        </div>
                     </div>
                     <div class="box2 box ">
                         <img src="barger4-removebg-preview.png" alt="" height="150" width="150">
                         <h3>Bacon BB Burger</h3>
-                        <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                        <h4>$4.90</h4>
+                        <div class="img2">
+                            <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                        </div>
                     </div>
                     <div class="box3 box ">
                         <img src="barger2-removebg-preview.png" alt="">
                         <h3>Bacon BB Burger</h3>
-                        <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                        <h4>$4.90 </h4>
+                        <div class="img2">
+                            <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                        </div>
                     </div>
                     <div class="box4 box ">
                         <img src="barger4-removebg-preview.png" alt="">
                         <h3>Bacon BB Burger</h3>
-                        <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                        <h4>$4.90 </h4>
+                        <div class="img2">
+                            <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                        </div>
                     </div>
                 </div>
                 <div class="sec2">
                     <div class="box5 box ">
                         <img src="barger2-removebg-preview.png" alt="">
                         <h3>Bacon BB Burger</h3>
-                        <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                        <h4>$4.90 </h4>
+                        <div class="img2">
+                            <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                        </div>
                     </div>
                     <div class="box6 box ">
                         <img src="barger4-removebg-preview.png" alt="">
                         <h3>Bacon BB Burger</h3>
-                        <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                        <h4>$4.90 </h4>
+                        <div class="img2">
+                            <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                        </div>
                     </div>
                     <div class="box7 box ">
                         <img src="barger2-removebg-preview.png" alt="">
                         <h3>Bacon BB Burger</h3>
-                        <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                        <h4>$4.90</h4>
+                        <div class="img2">
+                            <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                        </div>
                     </div>
                     <div class="box8 box ">
                         <img src="barger4-removebg-preview.png" alt="">
                         <h3>Bacon BB Burger</h3>
-                        <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                        <h4>$4.90 </h4>
+                        <div class="img2">
+                            <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                        </div>
                     </div>
                 </div>
             </section>
@@ -106,22 +130,35 @@
                 <div class="box5 box ">
                     <img src="barger2-removebg-preview.png" alt="">
                     <h3>Bacon BB Burger</h3>
-                    <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                    <h4>$4.90 </h4>
+                    <div class="img2">
+                        <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                    </div>
+
                 </div>
                 <div class="box6 box ">
                     <img src="barger4-removebg-preview.png" alt="">
                     <h3>Bacon BB Burger</h3>
-                    <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                    <h4>$4.90 </h4>
+                    <div class="img2">
+                        <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                    </div>
                 </div>
                 <div class="box7 box ">
                     <img src="barger2-removebg-preview.png" alt="">
                     <h3>Bacon BB Burger</h3>
-                    <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                    <h4>$4.90 </h4>
+                    <div class="img2">
+                        <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                    </div>
                 </div>
                 <div class="box8 box ">
                     <img src="barger4-removebg-preview.png" alt="">
                     <h3>Bacon BB Burger</h3>
-                    <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                    <h4>$4.90 </h4>
+                    <div class="img2">
+                        <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                    </div>
                 </div>
             </div>
             </section>
@@ -129,22 +166,34 @@
                 <div class="box5 box ">
                     <img src="barger2-removebg-preview.png" alt="">
                     <h3>Bacon BB Burger</h3>
-                    <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                    <h4>$4.90 </h4>
+                    <div class="img2">
+                        <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                    </div>
                 </div>
                 <div class="box6 box ">
                     <img src="barger4-removebg-preview.png" alt="">
                     <h3>Bacon BB Burger</h3>
-                    <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                    <h4>$4.90 </h4>
+                    <div class="img2">
+                        <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                    </div>
                 </div>
                 <div class="box7 box ">
                     <img src="barger2-removebg-preview.png" alt="">
                     <h3>Bacon BB Burger</h3>
-                    <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                    <h4>$4.90</h4>
+                    <div class="img2">
+                        <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                    </div>
                 </div>
                 <div class="box8 box ">
                     <img src="barger4-removebg-preview.png" alt="">
                     <h3>Bacon BB Burger</h3>
-                    <h4>$4.90 <i class="fa-solid fa-bag-shopping"></i></h4>
+                    <h4>$4.90 </h4>
+                    <div class="img2">
+                        <img src="shopping bag icon.svg" alt="njk" class="shopping-bag">
+                    </div>
                 </div>
             </div>
             </section>
